OpenRewrite: Java 17